# travel-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: orchestrator.py  tools.py
app/api/routes/: chat.py  documents.py  health.py  sessions.py
app/core/: circuit_breaker.py  logging.py
app/core/agent/: orchestrator.py  planner.py  react_agent.py  reflection.py
app/core/intent/: intents.py  llm_classifier.py  recognizer.py  rule_engine.py
app/core/memory/: long_term.py  session_store.py  short_term.py  summary.py
app/core/prompt/: state_machine.py  templates.py
app/core/rag/: generator.py  reranker.py  retriever.py  service.py
app/core/tools/: booking.py  mcp_client.py  policy_query.py  registry.py  travel_search.py
app/domain/: schemas.py
app/domain/travel/: itinerary.py  models.py  policy.py
app/etl/: pipeline.py
app/infrastructure/cache/: redis_client.py
app/infrastructure/database/: models.py  session.py
app/infrastructure/llm/: circuit_breaker.py  client.py  router.py
app/infrastructure/observability/: metrics.py  tracer.py
app/services/: approval.py  booking_store.py  embeddings.py  employee_directory.py  llm.py  milvus_store.py
data/policies/: 差旅管理制度.md
docs/: PRODUCT.md
scripts/: seed_policies.py
tests/: conftest.py  test_intent.py  test_orchestrator.py  test_p0_session_and_stream.py  test_p1_rag.py  test_p2_intent_and_registry.py  test_p4_closed_loop.py  test_rag.py  test_sessions_api.py
web/: index.html
(+1 files in other folders)
