[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-agent"
version = "0.1.0"
description = "差旅 AI Agent：FastAPI + 工具调用 + RAG + 对话记忆"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "danr", email = "unificcapal@gmail.com" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "openai>=1.50.0",
  "httpx[socks]>=0.27.0",
  "redis>=5.1.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "pymilvus>=2.4.7",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# UP042(str+Enum → StrEnum)为 unsafe fix：会改变 str()/format() 语义，暂不迁移
ignore = ["UP042"]
